--- a/.github/workflows/release-operator.yml
+++ b/.github/workflows/release-operator.yml
@@ -3,39 +3,35 @@ on:
   workflow_call:
     inputs:
       OPERATOR_SDK_VERSION:
-        description: 'Version of Operator SDK Binary for installation'
-        default: 'v1.9.0'
+        description: "Version of Operator SDK Binary for installation"
+        default: "v1.9.0"
         required: false
         type: string
       BUILD_PLATFORMS:
         description: 'Comma separated list of targets for builds e.g. "linux/amd64,linux/arm64,linux/ppc64le"'
-        default: 'linux/amd64,linux/arm64,linux/ppc64le'
+        default: "linux/amd64,linux/arm64,linux/ppc64le"
         required: false
         type: string
       PR_ACTOR:
-        description: 'Email for Git Commit PR to Release Operator'
+        description: "Email for Git Commit PR to Release Operator"
         required: false
         type: string
     secrets:
       COMMUNITY_OPERATOR_PAT:
-        description: 'Github PAT Token for Community Operator Fork Git Operations'
+        description: "Github PAT Token for Community Operator Fork Git Operations"
         required: true
-      PAT_TOKEN:
-        description: 'Github PAT Token for Github Release Operations'
-        required: true      
       REGISTRY_USERNAME:
-        description: 'Username for Registry'
+        description: "Username for Registry"
         required: true
       REGISTRY_PASSWORD:
-        description: 'Password for Registry'
+        description: "Password for Registry"
         required: true
       OPERATOR_IMAGE_REPOSITORY:
-        description: 'Registry image e.g. quay.io/redhat-cop/repository-name'
+        description: "Registry image e.g. quay.io/redhat-cop/repository-name"
         required: false
       BUNDLE_IMAGE_REPOSITORY:
-        description: 'Registry image e.g. quay.io/redhat-cop/repository-name'
+        description: "Registry image e.g. quay.io/redhat-cop/repository-name"
         required: false
-        
 
 env:
   DEFAULT_BUNDLE_VERSION: "0.0.1"
@@ -46,7 +42,7 @@ env:
 jobs:
   setup:
     runs-on: ubuntu-latest
-    name: setup      
+    name: setup
     steps:
       - name: Check if registry secrets are set
         run: |
@@ -64,7 +60,7 @@ jobs:
 
       - name: Setting Workflow Variables
         id: set-variables
-        env: 
+        env:
           BUILD_PLATFORMS: ${{ inputs.BUILD_PLATFORMS }}
         run: |
           echo "::set-output name=repository_name::$(basename $GITHUB_REPOSITORY)"
@@ -108,7 +104,6 @@ jobs:
             echo "::set-output name=operator_version::$DEFAULT_OPERATOR_VERSION"
             echo "::set-output name=bundle_version::$DEFAULT_BUNDLE_VERSION"
           fi
-          
 
       - name: Verify Semver Release
         if: ${{ steps.set-variables-image.outputs.tag_event == 'true' }}
@@ -129,7 +124,7 @@ jobs:
 
       - name: Check out code
         uses: actions/checkout@v2
-          
+
       - name: Go Build Cache
         uses: actions/cache@v2
         with:
@@ -146,7 +141,7 @@ jobs:
         run: go mod download
 
       - name: Download Binaries
-        env: 
+        env:
           OPERATOR_SDK_VERSION: ${{ inputs.OPERATOR_SDK_VERSION }}
         run: |
           # Create Binary Directory
@@ -273,7 +268,7 @@ jobs:
           file: "./ci.Dockerfile"
           platforms: ${{ matrix.platform }}
           push: true
-          tags: "${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ steps.setup-build-step.outputs.platform_os }}-${{ steps.setup-build-step.outputs.platform_arch }}-${{ env.OPERATOR_VERSION }}"
+          tags: "${{ env.OPERATOR_IMAGE_REPOSITORY }}:latest-${{ steps.setup-build-step.outputs.platform_os }}-${{ steps.setup-build-step.outputs.platform_arch }},${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ env.OPERATOR_VERSION }}-${{ steps.setup-build-step.outputs.platform_os }}-${{ steps.setup-build-step.outputs.platform_arch }}"
 
       - name: Prepare Distribution Artifacts
         shell: bash
@@ -289,11 +284,10 @@ jobs:
         with:
           name: dist
           path: dist
-  
-      
-  build-image:
-    runs-on: ubuntu-latest 
-    name: build-image
+
+  process-operator-image-manifest:
+    runs-on: ubuntu-latest
+    name: process-operator-image-manifest
     needs: ["setup", "build-operator"]
     env:
       REPOSITORY_NAME: ${{ needs.setup.outputs.repository_name }}
@@ -310,20 +304,31 @@ jobs:
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
           registry: ${{ env.OPERATOR_IMAGE_REGISTRY }}
-      
+
       - name: "Append to Image Manifest"
         shell: bash
         run: |
-          podman manifest create ${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ env.OPERATOR_VERSION }}
-          for TAG in ${{ needs.setup.outputs.image_platform_tags }}; do \
-              podman manifest add ${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ env.OPERATOR_VERSION }} docker://${{ env.OPERATOR_IMAGE_REPOSITORY }}:$TAG-${{ env.OPERATOR_VERSION }}; \
+          TAGS="latest"
+
+          if [ "${{ env.OPERATOR_VERSION }}" != "latest" ]; then
+            TAGS+=" ${{ env.OPERATOR_VERSION }}"
+          fi
+
+          for TAG in $TAGS; do \
+            podman manifest create ${{ env.OPERATOR_IMAGE_REPOSITORY }}:$TAG
+            for PLATFORM in ${{ needs.setup.outputs.image_platform_tags }}; do \
+                podman manifest add ${{ env.OPERATOR_IMAGE_REPOSITORY }}:$TAG docker://${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ env.OPERATOR_VERSION }}-$PLATFORM; \
+            done
+            podman manifest push ${{ env.OPERATOR_IMAGE_REPOSITORY }}:$TAG docker://${{ env.OPERATOR_IMAGE_REPOSITORY }}:$TAG
           done
-          podman manifest push ${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ env.OPERATOR_VERSION }} docker://${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ env.OPERATOR_VERSION }}
 
   build-bundle:
     runs-on: ubuntu-latest
     name: build-bundle
-    needs: ["setup", "build-operator", "build-image"]
+    needs: ["setup", "build-operator", "process-operator-image-manifest"]
+    strategy:
+      matrix:
+        platform: ${{ fromJson(needs.setup.outputs.dist_matrix) }}
     env:
       REPOSITORY_NAME: ${{ needs.setup.outputs.repository_name }}
       OPERATOR_VERSION: ${{ needs.setup.outputs.operator_version }}
@@ -368,6 +373,10 @@ jobs:
           # Make Binaries Executable
           chmod +x ${{ needs.setup.outputs.bin_dir }}/*
 
+          # Configure Platform Variables
+          echo "::set-output name=platform_os::$(echo ${{ matrix.platform }} |  cut -d/ -f1)"
+          echo "::set-output name=platform_arch::$(echo ${{ matrix.platform }} |  cut -d/ -f2)"
+
       - name: build bundle
         shell: bash
         run: make bundle IMG=${{ env.OPERATOR_IMAGE_REPOSITORY }}:${{ env.OPERATOR_VERSION }} VERSION=${{ env.BUNDLE_VERSION }} DEFAULT_CHANNEL=${{ env.DEFAULT_BUNDLE_CHANNEL }}
@@ -406,8 +415,8 @@ jobs:
           file: ./bundle.Dockerfile
           platforms: ${{ matrix.platform }}
           push: true
-          tags: "${{ env.BUNDLE_IMAGE_REPOSITORY }}:latest,${{ env.BUNDLE_IMAGE_REPOSITORY }}:${{ env.BUNDLE_VERSION }}"
-          
+          tags: "${{ env.BUNDLE_IMAGE_REPOSITORY }}:latest-${{ steps.setup-build-step.outputs.platform_os }}-${{ steps.setup-build-step.outputs.platform_arch }},${{ env.BUNDLE_IMAGE_REPOSITORY }}:${{ env.BUNDLE_VERSION }}-${{ steps.setup-build-step.outputs.platform_os }}-${{ steps.setup-build-step.outputs.platform_arch }}"
+
       - name: Prepare Distribution Artifacts
         shell: bash
         run: |
@@ -415,17 +424,56 @@ jobs:
           mkdir dist
 
           # Prepare Bundle
-          cp -R bundle ${{ env.REPOSITORY_NAME }}-bundle-${{ env.OPERATOR_VERSION }}
-          tar -czvf ${{ env.REPOSITORY_NAME }}-bundle-${{ env.OPERATOR_VERSION }}.tar.gz ${{ env.REPOSITORY_NAME }}-bundle-${{ env.OPERATOR_VERSION }}
-          mv ${{ env.REPOSITORY_NAME }}-bundle-${{ env.OPERATOR_VERSION }}.tar.gz dist
-          rm -Rf ${{ env.REPOSITORY_NAME }}-bundle-${{ env.OPERATOR_VERSION }}
+          cp -R bundle ${{ env.REPOSITORY_NAME }}-bundle-${{ env.OPERATOR_VERSION }}-${{ steps.setup-build-step.outputs.platform_os }}-${{ steps.setup-build-step.outputs.platform_arch }}
+          tar -czvf ${{ env.REPOSITORY_NAME }}-bundle-${{ env.OPERATOR_VERSION }}-${{ steps.setup-build-step.outputs.platform_os }}-${{ steps.setup-build-step.outputs.platform_arch }}.tar.gz ${{ env.REPOSITORY_NAME }}-bundle-${{ env.OPERATOR_VERSION }}-${{ steps.setup-build-step.outputs.platform_os }}-${{ steps.setup-build-step.outputs.platform_arch }}
+          mv ${{ env.REPOSITORY_NAME }}-bundle-${{ env.OPERATOR_VERSION }}-${{ steps.setup-build-step.outputs.platform_os }}-${{ steps.setup-build-step.outputs.platform_arch }}.tar.gz dist
+          rm -Rf ${{ env.REPOSITORY_NAME }}-bundle-${{ env.OPERATOR_VERSION }}-${{ steps.setup-build-step.outputs.platform_os }}-${{ steps.setup-build-step.outputs.platform_arch }}
 
       - name: Upload Dist
         uses: actions/upload-artifact@v2
         with:
           name: dist
           path: dist
-          
+
+  process-bundle-image-manifest:
+    runs-on: ubuntu-latest
+    name: process-bundle-image-manifest
+    needs:
+      [
+        "setup",
+        "build-operator",
+        "process-operator-image-manifest",
+        "build-bundle",
+      ]
+    env:
+      REPOSITORY_NAME: ${{ needs.setup.outputs.repository_name }}
+      OPERATOR_VERSION: ${{ needs.setup.outputs.operator_version }}
+      BUNDLE_VERSION: ${{ needs.setup.outputs.bundle_version }}
+      OPERATOR_IMAGE_REPOSITORY: "${{ needs.setup.outputs.operator_image_registry }}/${{ needs.setup.outputs.operator_image_repository_name }}"
+      OPERATOR_IMAGE_REGISTRY: ${{ needs.setup.outputs.operator_image_registry }}
+      BUNDLE_IMAGE_REPOSITORY: "${{ needs.setup.outputs.bundle_image_registry }}/${{ needs.setup.outputs.bundle_image_repository_name }}"
+      BUNDLE_IMAGE_REGISTRY: ${{ needs.setup.outputs.bundle_image_registry }}
+    steps:
+      - name: Log in to Registry
+        uses: redhat-actions/podman-login@v1
+        with:
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
+          registry: ${{ env.OPERATOR_IMAGE_REGISTRY }}
+
+      - name: "Append to Bundle Image Manifest"
+        shell: bash
+        run: |
+          TAGS="latest ${{ env.BUNDLE_VERSION }}"
+
+          for TAG in $TAGS; do \
+            podman manifest create ${{ env.BUNDLE_IMAGE_REPOSITORY }}:$TAG
+            for PLATFORM in ${{ needs.setup.outputs.image_platform_tags }}; do \
+                podman manifest add ${{ env.BUNDLE_IMAGE_REPOSITORY }}:$TAG docker://${{ env.BUNDLE_IMAGE_REPOSITORY }}:${{ env.BUNDLE_VERSION }}-$PLATFORM; \
+            done
+            podman manifest push ${{ env.BUNDLE_IMAGE_REPOSITORY }}:$TAG docker://${{ env.BUNDLE_IMAGE_REPOSITORY }}:$TAG
+          done
+
   package-helm:
     runs-on: ubuntu-latest
     name: package-helm
@@ -491,7 +539,15 @@ jobs:
     runs-on: ubuntu-latest
     name: github-release
     if: ${{ needs.setup.outputs.tag_event == 'true' }}
-    needs: ["setup", "build-operator", "build-bundle", "package-helm"]
+    needs:
+      [
+        "setup",
+        "build-operator",
+        "build-bundle",
+        "package-helm",
+        "process-bundle-image-manifest",
+        "process-operator-image-manifest",
+      ]
     env:
       OPERATOR_VERSION: ${{ needs.setup.outputs.operator_version }}
     steps:
@@ -530,12 +586,12 @@ jobs:
           draft: false
           prerelease: false
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload release binaries
         uses: svenstaro/upload-release-action@v2
         with:
-          repo_token: ${{ secrets.PAT_TOKEN }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: dist/*
           tag: ${{ github.ref }}
           overwrite: true
@@ -545,7 +601,14 @@ jobs:
     runs-on: ubuntu-latest
     name: helm-release
     if: ${{ needs.setup.outputs.tag_event == 'true' }}
-    needs: ["setup", "build-operator", "build-bundle", "package-helm"]
+    needs:
+      [
+        "setup",
+        "build-operator",
+        "build-bundle",
+        "package-helm",
+        "process-bundle-image-manifest",
+      ]
     env:
       REPOSITORY_NAME: ${{ needs.setup.outputs.repository_name }}
       HELM_RELEASE_VERSION: ${{ needs.setup.outputs.operator_version }}
@@ -641,44 +704,39 @@ jobs:
           # Create Bundle Directory
           mkdir bundle
 
-          # Untar
-          ls dist/${{ env.REPOSITORY_NAME }}-bundle*.tar.gz | xargs -n1 tar -C bundle/ --strip-components=1 -xzvf
+          # Untar Linux amd64 bundle
+          ls dist/${{ env.REPOSITORY_NAME }}-bundle*-linux-amd64.tar.gz | xargs -n1 tar -C bundle/ --strip-components=1 -xzvf
 
-      - name: check whether it is first release
+      - name: Check Whether it is First Release
+        id: check-first-release
         shell: bash
         run: |
-          echo first_release=$([[ ! -d "./tmp/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}//operators/${{ env.REPOSITORY_NAME }} ]] && echo 'true' || echo 'false') >> $GITHUB_ENV
+          first_release=$([[ ! -d "./tmp/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}//operators/${{ env.REPOSITORY_NAME }}" ]] && echo 'true' || echo 'false')
           echo $first_release
-      
-      - name: create and copy bundle to community operators
-        shell: bash
-        run: | 
-          make bundle IMG=quay.io/${{ github.repository_owner }}/${{ env.REPOSITORY_NAME }}:v${VERSION} VERSION=${VERSION} DEFAULT_CHANNEL=alpha
-          sed  's/bundle\///g' bundle.Dockerfile > bundle/Dockerfile
-          sed -i '/replaces: '"${{ env.REPOSITORY_NAME }}"'/d' ./bundle/manifests/${{ env.REPOSITORY_NAME }}.clusterserviceversion.yaml
-          mkdir -p ./tmp/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}//operators/${{ env.REPOSITORY_NAME }}/${VERSION}
-          /bin/cp -v -R ./bundle/* ./tmp/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}/operators/${{ env.REPOSITORY_NAME }}/${VERSION}
-          /bin/cp -v -R ./config/community-operators/ci.yaml ./tmp/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}/operators/$(basename ${{ env.REPOSITORY_NAME }}   
-      
-      - name: process bundle for disconnected support
-        uses: redhat-cop/github-actions/disconnected-csv@master
-        with:
-          CSV_FILE: "./tmp/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}/operators/${{ env.REPOSITORY_NAME }}/${{ env.VERSION }}/manifests/${{ env.REPOSITORY_NAME }}.clusterserviceversion.yaml"
-          TAGS_TO_DIGESTS: ${OPERATOR_IMAGE_TAG}
 
-      - name: Create Pull Request
+          echo "::set-output name=first_release::$first_release"
+
+      - name: Create and Copy Bundle to Community Operators
+        shell: bash
+        run: |
+          sed -i '/replaces: '"${{ env.REPOSITORY_NAME }}"'/d' ./bundle/manifests/${{ env.REPOSITORY_NAME }}.clusterserviceversion.yaml
+          mkdir -p ./tmp/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}/operators/${{ env.REPOSITORY_NAME }}/${{ env.BUNDLE_VERSION }}
+          /bin/cp -v -R ./bundle/* ./tmp/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}/operators/${{ env.REPOSITORY_NAME }}/${{ env.BUNDLE_VERSION }}
+          /bin/cp -v -R ./config/community-operators/ci.yaml ./tmp/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}/operators/${{ env.REPOSITORY_NAME }}
+
+      - name: Create Pull Request (First Release)
         uses: peter-evans/create-pull-request@v3
-        if: ${{ startsWith( env.first_release, 'true' ) }}
+        if: ${{ steps.check-first-release.outputs.first_release == 'true' }}
         with:
-          path: ./tmp/community-operators-prod
-          commit-message: ${{ env.REPOSITORY_NAME }} release ${{ env.VERSION }}
+          path: ./tmp/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}
+          commit-message: ${{ env.REPOSITORY_NAME }} release ${{ env.BUNDLE_VERSION }}
           committer: ${{ github.actor }} <${{ inputs.PR_ACTOR }}>
           author: ${{ github.actor }} <${{ inputs.PR_ACTOR }}>
           signoff: true
-          branch: ${{ env.REPOSITORY_NAME }}-${{ env.VERSION }}
+          branch: ${{ env.REPOSITORY_NAME }}-${{ env.BUNDLE_VERSION }}
           delete-branch: true
           push-to-fork: ${{ github.repository_owner }}/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}
-          title: ${{ env.REPOSITORY_NAME }} initial commit
+          title: ${{ env.REPOSITORY_NAME }} initial version ${{ env.BUNDLE_VERSION }}
           body: |
             ### New Submissions
             * [x] Has you operator [nested directory structure](https://github.com/operator-framework/community-operators/blob/master/docs/contributing.md#create-a-bundle)?
@@ -719,17 +777,17 @@ jobs:
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
-        if: ${{ ! startsWith( env.first_release, 'true' ) }} 
+        if: ${{ steps.check-first-release.outputs.first_release != 'true' }}
         with:
-          path: ./tmp/community-operators-prod
-          commit-message: ${{ env.REPOSITORY_NAME }} release ${{ env.VERSION }}
+          path: ./tmp/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}
+          commit-message: ${{ env.REPOSITORY_NAME }} release ${{ env.BUNDLE_VERSION }}
           committer: ${{ github.actor }} <${{ inputs.PR_ACTOR }}>
           author: ${{ github.actor }} <${{ inputs.PR_ACTOR }}>
           signoff: true
-          branch: ${{ env.REPOSITORY_NAME }}-${{ env.VERSION }}
+          branch: ${{ env.REPOSITORY_NAME }}-${{ env.BUNDLE_VERSION }}
           delete-branch: true
           push-to-fork: ${{ github.repository_owner }}/${{ env.COMMUNITY_OPERATORS_REPOSITORY_NAME }}
-          title: ${{ env.REPOSITORY_NAME }} new version ${{ env.VERSION }}
+          title: ${{ env.REPOSITORY_NAME }} new version ${{ env.BUNDLE_VERSION }}
           body: |
             ### New Submissions
             * [ ] Has you operator [nested directory structure](https://github.com/operator-framework/community-operators/blob/master/docs/contributing.md#create-a-bundle)?
@@ -766,4 +824,4 @@ jobs:
             --
             <sup>1</sup> If you feel your Operator does not fit any of the pre-defined categories, file a PR against this repo and explain your need
             <sup>2</sup> For more information see [here](https://github.com/operator-framework/operator-sdk/blob/master/doc/images/operator-capability-level.svg)
-          token:  ${{ secrets.COMMUNITY_OPERATOR_PAT }}
+          token: ${{ secrets.COMMUNITY_OPERATOR_PAT }}
